// Copyright 2017 The Cockroach Authors.
// Copyright (c) 2022-present, Shanghai Yunxi Technology Co, Ltd. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
// This software (KWDB) is licensed under Mulan PSL v2.
// You can use this software according to the terms and conditions of the Mulan PSL v2.
// You may obtain a copy of Mulan PSL v2 at:
//          http://license.coscl.org.cn/MulanPSL2
// THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND,
// EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT,
// MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
// See the Mulan PSL v2 for more details.

syntax = "proto3";
package kwbase.kv.kvserver.storagepb;
option go_package = "storagepb";

import "roachpb/metadata.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

enum RangeLogEventType {
  // These are lower case to maintain compatibility with how they were
  // originally stored.
  // Split is the event type recorded when a range splits.
  split = 0;
  // Merge is the event type recorded when a range merges.
  merge = 3;
  // Add is the event type recorded when a range adds a new replica.
  add = 1;
  // Remove is the event type recorded when a range removed an existing replica.
  remove = 2;
}

message RangeLogEvent {
  message Info {
      roachpb.RangeDescriptor updated_desc = 1 [(gogoproto.jsontag) = "UpdatedDesc,omitempty"];
      roachpb.RangeDescriptor new_desc = 2 [(gogoproto.jsontag) = "NewDesc,omitempty"];
      roachpb.RangeDescriptor removed_desc = 7 [(gogoproto.jsontag) = "RemovedDesc,omitempty"];
      roachpb.ReplicaDescriptor added_replica = 3 [(gogoproto.jsontag) = "AddReplica,omitempty"];
      roachpb.ReplicaDescriptor removed_replica = 4 [(gogoproto.jsontag) = "RemovedReplica,omitempty"];
      string reason = 5 [
        (gogoproto.jsontag) = "Reason,omitempty",
        (gogoproto.casttype) = "RangeLogEventReason"
      ];
      string details = 6 [(gogoproto.jsontag) = "Details,omitempty"];
  }

  google.protobuf.Timestamp timestamp = 1 [
      (gogoproto.nullable) = false,
      (gogoproto.stdtime) = true
  ];
  int64 range_id = 2 [
    (gogoproto.customname) = "RangeID",
    (gogoproto.casttype) = "gitee.com/kwbasedb/kwbase/pkg/roachpb.RangeID"
  ];
  int32 store_id = 3 [
    (gogoproto.customname) = "StoreID",
    (gogoproto.casttype) = "gitee.com/kwbasedb/kwbase/pkg/roachpb.StoreID"
  ];
  RangeLogEventType event_type = 4;
  int64 other_range_id = 5 [
    (gogoproto.customname) = "OtherRangeID",
    (gogoproto.casttype) = "gitee.com/kwbasedb/kwbase/pkg/roachpb.RangeID"
  ];
  Info info = 6;
}
